--- a/coc-settings.json
+++ b/coc-settings.json
@@ -3,6 +3,7 @@
 	"coc.preferences.messageLevel": "error",
 	"coc.source.around.firstMatch": false,
 	"coc.source.buffer.firstMatch": false,
+	"suggest.minTriggerInputLength": 2,
 	"suggest.enablePreview": true,
 	"suggest.triggerCompletionWait": 50,
 	"suggest.completionItemKindLabels": {
@@ -133,6 +134,47 @@
 	],
 	"python.jediEnabled": false,
 	"yank.list.maxsize": 30,
+	"languageserver": {
+		"ccls": {
+			"command": "ccls",
+			"filetypes": [
+				"c",
+				"cc",
+				"cpp",
+				"c++",
+				"objc",
+				"objcpp"
+			],
+			"rootPatterns": [
+				"compile_commands.json",
+				".git/",
+				".hg/",
+				".vscode",
+				".vim/"
+			],
+			"initializationOptions": {
+				"highlight": {
+					"lsRanges": true
+				},
+				"cache": {
+					"directory": "/tmp/ccls"
+				},
+				"clang": {
+					"resourceDir": "/usr/bin/clang"
+				},
+				"completion": {
+					"detailedLable": true,
+					"placeholder": true
+				},
+				"index": {
+					"onChange": false,
+					"initialNoLinkage": true,
+					"threads": 2
+				},
+				"compilationDatabaseDirectory": ".vscode/"
+			}
+		}
+	},
 	"go.goplsUseDaemon": false,
 	"go.goplsOptions": {
 		"completeUnimported": true
