52.Add tcomment_vim plugin

--- a/tasks.ini
+++ b/tasks.ini
@@ -19,7 +19,7 @@ command:c=gcc -O2 -Wall "$(VIM_FILEPATH)" -o "$(VIM_PATHNOEXT)" -lstdc++ -lm -ms
 command:cpp=g++ -O2 -Wall "$(VIM_FILEPATH)" -o "$(VIM_PATHNOEXT)" -lstdc++ -lm -msse3
 command:go=go build -o "$(VIM_PATHNOEXT)" "$(VIM_FILEPATH)"
 command:make=make -f "$(VIM_FILEPATH)"
-output=quickfix
+output=terminal
 cwd=$(VIM_FILEDIR)
 save=2
 pos=floaterm
