--- a/coc-settings.json
+++ b/coc-settings.json
@@ -50,7 +50,7 @@
     "go"
   ],
   "yaml.format.enable": true,
-  "explorer.width": 38,
+  "explorer.width": 35,
   "explorer.file.column.indent.indentLine": false,
   "explorer.file.showHiddenFiles": true,
   "explorer.icon.enableNerdfont": true,
@@ -132,8 +132,8 @@
   "python.jediEnabled": false,
   "yank.list.maxsize": 30,
   "yank.enableCompletion": false,
-  "list.nextKeymap": "<A-e>",
-  "list.previousKeymap": "<A-u>",
+  "list.nextKeymap": "<C-e>",
+  "list.previousKeymap": "<C-u>",
   "lists.disabledLists": [
     "cmdhistory",
     "colors",
