--- a/coc-settings.json
+++ b/coc-settings.json
@@ -130,8 +130,8 @@
   "python.jediEnabled": false,
   "yank.list.maxsize": 50,
   "yank.enableCompletion": false,
-  "list.nextKeymap": "<C-e>",
-  "list.previousKeymap": "<C-u>",
+  "list.nextKeymap": "<A-e>",
+  "list.previousKeymap": "<A-u>",
   "lists.disabledLists": [
     "cmdhistory",
     "colors",
